--- a/src/main/resources/templates/user-info.html
+++ b/src/main/resources/templates/user-info.html
@@ -3,28 +3,105 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>User Info</title>
+  <title>Информация о пользователе</title>
 </head>
 
+<style>
+  .table_blur {
+    background: #f5ffff;
+    border-collapse: collapse;
+    text-align: left;
+  }
+  .table_blur th {
+    border-top: 1px solid #777777;
+    border-bottom: 1px solid #777777;
+    box-shadow: inset 0 1px 0 #999999, inset 0 -1px 0 #999999;
+    background: linear-gradient(#9595b6, #5a567f);
+    color: white;
+    padding: 10px 15px;
+    position: relative;
+  }
+  .table_blur th:after {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 25%;
+    height: 25%;
+    width: 100%;
+    background: linear-gradient(rgba(255, 255, 255, 0), rgba(255,255,255,.08));
+  }
+  .table_blur tr:nth-child(odd) {
+    background: #ebf3f9;
+  }
+  .table_blur th:first-child {
+    border-left: 1px solid #777777;
+    border-bottom:  1px solid #777777;
+    box-shadow: inset 1px 1px 0 #999999, inset 0 -1px 0 #999999;
+  }
+  .table_blur th:last-child {
+    border-right: 1px solid #777777;
+    border-bottom:  1px solid #777777;
+    box-shadow: inset -1px 1px 0 #999999, inset 0 -1px 0 #999999;
+  }
+  .table_blur td {
+    border: 1px solid #e3eef7;
+    padding: 10px 15px;
+    position: relative;
+    transition: all 0.5s ease;
+  }
+  .table_blur tbody:hover td {
+    color: transparent;
+    text-shadow: 0 0 3px #a09f9d;
+  }
+  .table_blur tbody:hover tr:hover td {
+    color: #444444;
+    text-shadow: none;
+  }
+</style>
 
 <body>
-<h3>User Add</h3>
-<br>
-<form th:method="POST" th:action="@{/}" th:object="${user}">
-  <label for="id">ID</label>
-  <input type="text" th:field="*{id}" id="id" readonly/>
-  <br>
-  <br>
-  <label for="age">Age</label>
-  <input type="text" th:field="*{age}" id="age"/>
-  <br>
-  <br>
-  <label for="name">Name</label>
-  <input type="text" th:field="*{name}" id="name"/>
-  <br>
-  <br>
-  <input type="submit" value="Сохранить"/>
-
-</form>
+<table class="table_blur">
+  <tr>
+    <th colspan="4" text-align="center">EDIT USER</th>
+  </tr>
+  <tr>
+    <th>ID</th>
+    <th>NAME</th>
+    <th>AGE</th>
+    <th>ACTION</th>
+  </tr>
+  <tr>
+    <form th:method="POST" th:action="@{/}" th:object="${user}">
+      <td><input type="text" th:field="*{id}" id="id" readonly/></td>
+      <td><input type="text" th:field="*{name}" id="name"/></td>
+      <td><input type="text" th:field="*{age}" id="age"/></td>
+      <td><input type="submit" value="SAVE"/></td>
+    </form>
+  </tr>
+</table>
 </body>
+<!--оооо-->
+
+
+<!--<body>-->
+<!--<h3>Изменение/добавление пользователя</h3>-->
+<!--<br>-->
+<!--<form th:method="POST" th:action="@{/}" th:object="${user}">-->
+<!--  <label for="id">ID</label>-->
+<!--  <input type="text" th:field="*{id}" id="id" readonly/>-->
+<!--  <br>-->
+<!--  <br>-->
+<!--  <label for="age">Age</label>-->
+<!--  <input type="text" th:field="*{age}" id="age"/>-->
+<!--  <br>-->
+<!--  <br>-->
+<!--  <label for="name">Name</label>-->
+<!--  <input type="text" th:field="*{name}" id="name"/>-->
+<!--  <br>-->
+<!--  <br>-->
+<!--  <input type="submit" value="Сохранить"/>-->
+
+<!--</form>-->
+<!--</body>-->
 </html>
